Mon Jan 31 17:00:18 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* OMMatch stores query in a pointer rather than the historical
	  remnants of a stack.
	  OMEnquire updated accordingly.

	* OMEnquire deallocates RSet correctly.

	* querygui example compiles and works.

Fri Jan 28 16:44:49 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed problems with assigning to a query (old query elements were
	  left in place.)  Implemented automatic merging of OR and AND nodes
	  into a single list of terms to be ORed or ANDed.

Fri Jan 28 15:53:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added introspection methods to OMQuery.

Fri Jan 28 13:41:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Started Changelog

	* Previous state of code:

	  o An API for searching has just been created, but is undocumented,
	    will change in various ways in the coming weeks, and isn't quite
	    implemented correctly when building queries containing more than
	    one term.

	  o Stemming algorithms for dutch, english, french, german, italian,
	    portuguese and spanish added and tested.

	  o Searching through DA databases, raw text files (with naive
	    indexer) and multiple databases implemented.

	  o Documentation in a reasonably sorry state.  Next week is
	    documentation week.